feat(avatar): Allow logged-in users to proxy avatars without a token
